# dji-tello

./: README.md
install/: local_setup.sh  setup.sh
install/yolov5_bytetrack_ros/lib/yolov5_bytetrack_ros/: tello_image_publisher  tello_video_bridge  tello_video_subscriber  tracker_node
install/yolov5_bytetrack_ros/share/yolov5_bytetrack_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yolox/share/yolox/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/yolov5_bytetrack_ros/: package.xml  setup.cfg  setup.py
src/yolov5_bytetrack_ros/yolov5_bytetrack_ros/: tello_cmd_vel_bridge.py  tello_image_publisher.py  tello_video_subscribe1r.py  tracker_node.py  tracker_node2 (copy).py  tracker_node2.py
