<?xml version="1.0"?>
<package format="3">
  <name>yolov5_bytetrack_ros</name>
  <version>0.0.0</version>
  <description>YOLOv5 + ByteTrack based object tracking for Tello</description>
  <maintainer email="jf@todo.todo">jf</maintainer>
  <license>MIT</license>

  <!-- ROS2 Python 依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Python 测试依赖（可选） -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

